table component - fixed-action-menu - overflow:visible given

--- a/src/common/Table/Table.scss
+++ b/src/common/Table/Table.scss
@@ -62,6 +62,10 @@ tr:not(:nth-child(1)) td:last-child {
   position: relative;
 }
 
+td.fixed-action-menu {
+  overflow: visible;
+}
+
 .action-menu {
   position: absolute;
   top: 30px;
